--- a/index.html
+++ b/index.html
@@ -590,14 +590,22 @@
                   <p>2 x (1-to-10 push-up pyramid)</p>
                   <p>2 x 40 s Modified Abdominal Assault</p>
                   <p>90 s plank</p>
-                  <p>Physical therapy band exercises</p>
                   <p>Stretch</p>
+                  <p>Physical therapy band exercises</p>
                 </td>
             </tr>
             <tr>
                 <td class="week13">
                   <div>8</div>
-                  <p></p>
+                  <p>1.5 hr elliptical</p>
+                  <p>30 min indoor bike</p>
+                  <p>3 x 10 lat pulldowns with 90 lb</p>
+                  <p>3 x 20 machine shoulder presses with 40 lb</p>
+                  <p>8 x 15 push-ups</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s side plank (left and right)</p>
+                  <p>90 s plank</p>
+                  <p>Stretch</p>
                 </td>
                 <td class="week13">
                   <div>9</div>
