--- a/index.html
+++ b/index.html
@@ -597,7 +597,8 @@
             <tr>
                 <td class="week13">
                   <div>8</div>
-                  <p>1.5 hr elliptical</p>
+                  <p></p>
+                  <p>1.5 hr yoga</p>
                   <p>30 min indoor bike</p>
                   <p>3 x 10 lat pulldowns with 90 lb</p>
                   <p>3 x 20 machine shoulder presses with 40 lb</p>
@@ -609,7 +610,12 @@
                 </td>
                 <td class="week13">
                   <div>9</div>
-                  <p></p>
+                  <p>1 hr yoga</p>
+                  <p>10 pull-ups with rest</p>
+                  <p>55 push-ups</p>
+                  <p>20 min elliptical</p>
+                  <p>1 min side plank (left and right)</p>
+                  <p>Stretch</p>
                 </td>
                 <td class="week13">
                   <div>10</div>
