--- a/index.html
+++ b/index.html
@@ -619,7 +619,8 @@
                 </td>
                 <td class="week13">
                   <div>10</div>
-                  <p></p>
+                  <p>Physical therapy</p>
+                  <p>2 min plank</p>
                 </td>
                 <td class="week13">
                   <div>11</div>
