--- a/index.html
+++ b/index.html
@@ -624,7 +624,12 @@
                 </td>
                 <td class="week13">
                   <div>11</div>
-                  <p></p>
+                  <p>3 x 8 pull-ups with rest and some assisted</p>
+                  <p>3 x 40 push-ups</p>
+                  <p>3 x 20 machine shoulder presses with 40 lb</p>
+                  <p>20 min indoor bike</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>Physical therapy band exercises</p>
                 </td>
                 <td class="week13">
                   <div>12</div>
