--- a/index.html
+++ b/index.html
@@ -597,7 +597,6 @@
             <tr>
                 <td class="week13">
                   <div>8</div>
-                  <p></p>
                   <p>1.5 hr yoga</p>
                   <p>30 min indoor bike</p>
                   <p>3 x 10 lat pulldowns with 90 lb</p>
@@ -624,7 +623,7 @@
                 </td>
                 <td class="week13">
                   <div>11</div>
-                  <p>3 x 8 pull-ups with rest and some assisted</p>
+                  <p>3 x 8 pull-ups with breaks and some assisted</p>
                   <p>3 x 40 push-ups</p>
                   <p>3 x 20 machine shoulder presses with 40 lb</p>
                   <p>20 min indoor bike</p>
@@ -633,7 +632,14 @@
                 </td>
                 <td class="week13">
                   <div>12</div>
-                  <p></p>
+                  <p>75 min hr yoga</p>
+                  <p>3 x 12 lat pulldowns with 90 lb</p>
+                  <p>4 x 10 machine shoulder presses with 60 lb</p>
+                  <p>5 x 20 push-ups</p>
+                  <p>1 hr indoor bike</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>Stretch</p>
+                  <p>Physical therapy band exercises</p>
                 </td>
                 <td class="week13">
                   <div>13</div>
