--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                 </td>
                 <td class="week13">
                   <div>12</div>
-                  <p>75 min hr yoga</p>
+                  <p>75 min yoga</p>
                   <p>3 x 12 lat pulldowns with 90 lb</p>
                   <p>4 x 10 machine shoulder presses with 60 lb</p>
                   <p>5 x 20 push-ups</p>
@@ -643,7 +643,8 @@
                 </td>
                 <td class="week13">
                   <div>13</div>
-                  <p></p>
+                  <p>1 hr yoga</p>
+                  <p>Physical therapy band exercises</p>
                 </td>
                 <td class="week13">
                   <div>14</div>
