--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <li>Week 12: Sep 1 - Sep 7</li>
     </div>
     <div class="col-12 col-sm-4">
-      <li id="thisWeek">Week 13: Sep 8 - Sep 14</li>
-      <li>Week 14: Sep 15 - Sep 21</li>
+      <li>Week 13: Sep 8 - Sep 14</li>
+      <li id="thisWeek">Week 14: Sep 15 - Sep 21</li>
       <li>Week 15: Sep 22 - Sep 28</li>
       <li>Week 16: Sep 29 - Oct 5</li>
       <li>Week 17: Oct 6 - Oct 12</li>
@@ -644,21 +644,42 @@
                 <td class="week13">
                   <div>13</div>
                   <p>1 hr yoga</p>
-                  <p>Physical therapy band exercises</p>
+                  <p>Physical therapy</p>
                 </td>
                 <td class="week13">
                   <div>14</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
             </tr>
             <tr>
-                <td class="week14">15</td>
-                <td class="week14">16</td>
-                <td class="week14">17</td>
-                <td class="week14">18</td>
-                <td class="week14">19</td>
-                <td class="week14">20</td>
-                <td class="week14">21</td>
+                <td class="week14">
+                  <div>15</div>
+                  <p></p>
+                </td>
+                <td class="week14">
+                  <div>16</div>
+                  <p></p>
+                </td>
+                <td class="week14">
+                  <div>17</div>
+                  <p></p>
+                </td>
+                <td class="week14">
+                  <div>18</div>
+                  <p></p>
+                </td>
+                <td class="week14">
+                  <div>19</div>
+                  <p></p>
+                </td>
+                <td class="week14">
+                  <div>20</div>
+                  <p></p>
+                </td>
+                <td class="week14">
+                  <div>21</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week15">22</td>
