--- a/index.html
+++ b/index.html
@@ -654,11 +654,19 @@
             <tr>
                 <td class="week14">
                   <div>15</div>
-                  <p></p>
+                  <p>60 pull-ups with breaks and some kipping</p>
+                  <p>60, 2 x 20 push-ups</p>
+                  <p>20 min elliptical</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
                 </td>
                 <td class="week14">
                   <div>16</div>
-                  <p></p>
+                  <p>5 x 5 pull-ups with breaks</p>
+                  <p>5 x 5 pull-ups assisted with 30 lb</p>
+                  <p>2 x 40, 2 x 30, 2 x 20 push-ups</p>
+                  <p>20 min elliptical</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s plank</p>
                 </td>
                 <td class="week14">
                   <div>17</div>
