--- a/index.html
+++ b/index.html
@@ -670,7 +670,10 @@
                 </td>
                 <td class="week14">
                   <div>17</div>
-                  <p></p>
+                  <p>Physical therapy</p>
+                  <p>3 x 5 pull-ups</p>
+                  <p>40, 8 x 10 push-ups</p>
+                  <p>2 min plank</p>
                 </td>
                 <td class="week14">
                   <div>18</div>
