--- a/index.html
+++ b/index.html
@@ -677,19 +677,19 @@
                 </td>
                 <td class="week14">
                   <div>18</div>
-                  <p></p>
+                  <p>Rest</p>
                 </td>
                 <td class="week14">
                   <div>19</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week14">
                   <div>20</div>
-                  <p></p>
+                  <p>Physical therapy</p>
                 </td>
                 <td class="week14">
                   <div>21</div>
-                  <p></p>
+                  <p>15 mi outdoor cycling</p>
                 </td>
             </tr>
             <tr>
