--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
     <div class="col-12 col-sm-4">
       <li>Week 13: Sep 8 - Sep 14</li>
-      <li id="thisWeek">Week 14: Sep 15 - Sep 21</li>
-      <li>Week 15: Sep 22 - Sep 28</li>
+      <li>Week 14: Sep 15 - Sep 21</li>
+      <li id="thisWeek">Week 15: Sep 22 - Sep 28</li>
       <li>Week 16: Sep 29 - Oct 5</li>
       <li>Week 17: Oct 6 - Oct 12</li>
       <li>Week 18: Oct 13 - Oct 19</li>
@@ -693,13 +693,34 @@
                 </td>
             </tr>
             <tr>
-                <td class="week15">22</td>
-                <td class="week15">23</td>
-                <td class="week15">24</td>
-                <td class="week15">25</td>
-                <td class="week15">26</td>
-                <td class="week15">27</td>
-                <td class="week15">28</td>
+                <td class="week15">
+                  <div>22</div>
+                  <p></p>
+                </td>
+                <td class="week15">
+                  <div>23</div>
+                  <p></p>
+                </td>
+                <td class="week15">
+                  <div>24</div>
+                  <p></p>
+                </td>
+                <td class="week15">
+                  <div>25</div>
+                  <p></p>
+                </td>
+                <td class="week15">
+                  <div>26</div>
+                  <p></p>
+                </td>
+                <td class="week15">
+                  <div>27</div>
+                  <p></p>
+                </td>
+                <td class="week15">
+                  <div>28</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week16">29</td>
