--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <hr>
     <div id="purpose">
       <p>A project by David Wu. This is a public calendar log keeping a record of my workouts for 18 weeks up until the <a href="https://baystatemarathon.com/">Baystate Marathon</a> on Sunday, October 20, 2019 in Lowell, MA. I will be using <a href="https://content.nike.com/content/dam/one-nike/en_us/season-2015-su/Running/NikeRunClub/TrainingPlans/Marathon_Training_Plan_Miles_3_29_2016.pdf">Nike's 18-week marathon training program</a> for structure.</p>
-      <p>Note: Injuries and inconsistency have nixed the training plan but the end goal is still the same.</p>
+      <p>Note: Injuries and inconsistency have nixed the training plan but the end goal is still the same. Due to an injury, the current plan is to walk it.</p>
     </div>
     <button id="detailsPopover" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">
       <i class="fa fa-question-circle" aria-hidden="true"></i>
@@ -695,7 +695,9 @@
             <tr>
                 <td class="week15">
                   <div>22</div>
-                  <p></p>
+                  <p>66 push-ups</p>
+                  <p>5 x 8 pull-ups</p>
+                  <p>2 min plank</p>
                 </td>
                 <td class="week15">
                   <div>23</div>
