--- a/index.html
+++ b/index.html
@@ -701,11 +701,14 @@
                 </td>
                 <td class="week15">
                   <div>23</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week15">
                   <div>24</div>
-                  <p></p>
+                  <p>10 x 5 pull-ups</p>
+                  <p>60, 50, 40, 30, 20, 10 push-ups</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>Physical therapy</p>
                 </td>
                 <td class="week15">
                   <div>25</div>
