--- a/index.html
+++ b/index.html
@@ -712,7 +712,12 @@
                 </td>
                 <td class="week15">
                   <div>25</div>
-                  <p></p>
+                  <p>10, 7, 3 x 5, 3, 2 pull-ups</p>
+                  <p>1-to-14 push-up pyramid</p>
+                  <p>3 x 20 machine shoulder presses with 50 lb</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>1 min side plank (left and right)</p>
+                  <p>1 min plank</p>
                 </td>
                 <td class="week15">
                   <div>26</div>
