--- a/index.html
+++ b/index.html
@@ -721,11 +721,11 @@
                 </td>
                 <td class="week15">
                   <div>26</div>
-                  <p></p>
+                  <p>Rest</p>
                 </td>
                 <td class="week15">
                   <div>27</div>
-                  <p></p>
+                  <p>Physical therapy</p>
                 </td>
                 <td class="week15">
                   <div>28</div>
