--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="col-12 col-sm-4">
       <li>Week 13: Sep 8 - Sep 14</li>
       <li>Week 14: Sep 15 - Sep 21</li>
-      <li id="thisWeek">Week 15: Sep 22 - Sep 28</li>
-      <li>Week 16: Sep 29 - Oct 5</li>
+      <li>Week 15: Sep 22 - Sep 28</li>
+      <li id="thisWeek">Week 16: Sep 29 - Oct 5</li>
       <li>Week 17: Oct 6 - Oct 12</li>
       <li>Week 18: Oct 13 - Oct 19</li>
     </div>
@@ -729,7 +729,12 @@
                 </td>
                 <td class="week15">
                   <div>28</div>
-                  <p></p>
+                  <p>0.5 mi run on treadmill</p>
+                  <!-- <p>(12:00 min/mi pace)</p> -->
+                  <p>15, 2 x 10, 2 x 7 pull-ups</p>
+                  <p>68 push-ups</p>
+                  <p>3 x 30 squats</p>
+                  <p>Deck of Cards Workout (Red = Push-ups, Black = Sit-ups)</p>
                 </td>
             </tr>
             <tr>
