--- a/index.html
+++ b/index.html
@@ -738,13 +738,36 @@
                 </td>
             </tr>
             <tr>
-                <td class="week16">29</td>
-                <td class="week16">30</td>
-                <td class="otherMonth">1</td>
-                <td class="otherMonth">2</td>
-                <td class="otherMonth">3</td>
-                <td class="otherMonth">4</td>
-                <td class="otherMonth">5</td>
+                <td class="week16">
+                  <div>29</div>
+                  <p>5 x 8 pull-ups</p>
+                  <p>2 x 45 push-ups</p>
+                  <p>2 min plank</p>
+                </td>
+                <td class="week16">
+                  <div>30</div>
+                  <p></p>
+                </td>
+                <td class="otherMonth">
+                  <div>1</div>
+                  <p></p>
+                </td>
+                <td class="otherMonth">
+                  <div>2</div>
+                  <p></p>
+                </td>
+                <td class="otherMonth">
+                  <div>3</div>
+                  <p></p>
+                </td>
+                <td class="otherMonth">
+                  <div>4</div>
+                  <p></p>
+                </td>
+                <td class="otherMonth">
+                  <div>5</div>
+                  <p></p>
+                </td>
             </tr>
         </tbody>
     </table>
