--- a/index.html
+++ b/index.html
@@ -746,28 +746,18 @@
                 </td>
                 <td class="week16">
                   <div>30</div>
-                  <p></p>
+                  <p>0.75 mi run on treadmill</p>
+                  <!-- <p>(12:00 min/mi pace)</p> -->
+                  <p>17, 3 x 10, 5 x 5 pull-ups</p>
+                  <p>65, 50, 25 push-ups</p>
+                  <p>2 x 10 pull-ups assisted with 30 lb</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
                 </td>
-                <td class="otherMonth">
-                  <div>1</div>
-                  <p></p>
-                </td>
-                <td class="otherMonth">
-                  <div>2</div>
-                  <p></p>
-                </td>
-                <td class="otherMonth">
-                  <div>3</div>
-                  <p></p>
-                </td>
-                <td class="otherMonth">
-                  <div>4</div>
-                  <p></p>
-                </td>
-                <td class="otherMonth">
-                  <div>5</div>
-                  <p></p>
-                </td>
+                <td class="otherMonth">1</td>
+                <td class="otherMonth">2</td>
+                <td class="otherMonth">3</td>
+                <td class="otherMonth">4</td>
+                <td class="otherMonth">5</td>
             </tr>
         </tbody>
     </table>
@@ -791,11 +781,30 @@
             <tr>
                 <td class="otherMonth">29</td>
                 <td class="otherMonth">30</td>
-                <td class="week16">1</td>
-                <td class="week16">2</td>
-                <td class="week16">3</td>
-                <td class="week16">4</td>
-                <td class="week16">5</td>
+                <td class="week16">
+                  <div>1</div>
+                  <p>16, 8, 10, 8 pull-ups</p>
+                  <p>60 x 1 pull-up</p>
+                  <p>70 push-ups</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s plank</p>
+                </td>
+                <td class="week16">
+                  <div>2</div>
+                  <p></p>
+                </td>
+                <td class="week16">
+                  <div>3</div>
+                  <p></p>
+                </td>
+                <td class="week16">
+                  <div>4</div>
+                  <p></p>
+                </td>
+                <td class="week16">
+                  <div>5</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week17">6</td>
