--- a/index.html
+++ b/index.html
@@ -791,7 +791,12 @@
                 </td>
                 <td class="week16">
                   <div>2</div>
-                  <p></p>
+                  <p>2 mi walk on treadmill</p>
+                  <p>3 x 10, 2 x 5 pull-ups</p>
+                  <p>3 x 40 push-ups</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s plank</p>
+                  <p>40 push-ups</p>
                 </td>
                 <td class="week16">
                   <div>3</div>
