--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
                 </td>
                 <td class="week16">
                   <div>3</div>
-                  <p></p>
+                  <p>Physical therapy</p>
                 </td>
                 <td class="week16">
                   <div>4</div>
