--- a/index.html
+++ b/index.html
@@ -804,7 +804,11 @@
                 </td>
                 <td class="week16">
                   <div>4</div>
-                  <p></p>
+                  <p>3 mi walk on treadmill</p>
+                  <p>20, 3 x 7, 2 x 4, 2 x 3, 7, 10, 2 x 7, 5, 3 x 3, 7 pull-ups</p>
+                  <p>77 push-ups</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>1 min side plank (left and right)</p>
                 </td>
                 <td class="week16">
                   <div>5</div>
