--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <li>Week 13: Sep 8 - Sep 14</li>
       <li>Week 14: Sep 15 - Sep 21</li>
       <li>Week 15: Sep 22 - Sep 28</li>
-      <li id="thisWeek">Week 16: Sep 29 - Oct 5</li>
-      <li>Week 17: Oct 6 - Oct 12</li>
+      <li>Week 16: Sep 29 - Oct 5</li>
+      <li id="thisWeek">Week 17: Oct 6 - Oct 12</li>
       <li>Week 18: Oct 13 - Oct 19</li>
     </div>
   </ul>
@@ -812,17 +812,38 @@
                 </td>
                 <td class="week16">
                   <div>5</div>
-                  <p></p>
+                  <p>Rest</p>
                 </td>
             </tr>
             <tr>
-                <td class="week17">6</td>
-                <td class="week17">7</td>
-                <td class="week17">8</td>
-                <td class="week17">9</td>
-                <td class="week17">10</td>
-                <td class="week17">11</td>
-                <td class="week17">12</td>
+                <td class="week17">
+                  <div>6</div>
+                  <p>None</p>
+                </td>
+                <td class="week17">
+                  <div>7</div>
+                  <p></p>
+                </td>
+                <td class="week17">
+                  <div>8</div>
+                  <p></p>
+                </td>
+                <td class="week17">
+                  <div>9</div>
+                  <p></p>
+                </td>
+                <td class="week17">
+                  <div>10</div>
+                  <p></p>
+                </td>
+                <td class="week17">
+                  <div>11</div>
+                  <p></p>
+                </td>
+                <td class="week17">
+                  <div>12</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="week18">13</td>
