--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                 </td>
                 <td class="week17">
                   <div>7</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week17">
                   <div>8</div>
