--- a/index.html
+++ b/index.html
@@ -826,11 +826,14 @@
                 </td>
                 <td class="week17">
                   <div>8</div>
-                  <p></p>
+                  <p>16 pull-ups</p>
                 </td>
                 <td class="week17">
                   <div>9</div>
-                  <p></p>
+                  <p>18, 2 x 11, 2 x 9, 13, 3 x 10 pull-ups</p>
+                  <p>71, 2 x 40 push-ups</p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s plank</p>
                 </td>
                 <td class="week17">
                   <div>10</div>
