--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <li>Week 14: Sep 15 - Sep 21</li>
       <li>Week 15: Sep 22 - Sep 28</li>
       <li>Week 16: Sep 29 - Oct 5</li>
-      <li id="thisWeek">Week 17: Oct 6 - Oct 12</li>
-      <li>Week 18: Oct 13 - Oct 19</li>
+      <li>Week 17: Oct 6 - Oct 12</li>
+      <li id="thisWeek">Week 18: Oct 13 - Oct 19</li>
     </div>
   </ul>
 
@@ -837,25 +837,46 @@
                 </td>
                 <td class="week17">
                   <div>10</div>
-                  <p></p>
+                  <p>Rest</p>
                 </td>
                 <td class="week17">
                   <div>11</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week17">
                   <div>12</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
             </tr>
             <tr>
-                <td class="week18">13</td>
-                <td class="week18">14</td>
-                <td class="week18">15</td>
-                <td class="week18">16</td>
-                <td class="week18">17</td>
-                <td class="week18">18</td>
-                <td class="week18">19</td>
+                <td class="week18">
+                  <div>13</div>
+                  <p>None</p>
+                </td>
+                <td class="week18">
+                  <div>14</div>
+                  <p></p>
+                </td>
+                <td class="week18">
+                  <div>15</div>
+                  <p></p>
+                </td>
+                <td class="week18">
+                  <div>16</div>
+                  <p></p>
+                </td>
+                <td class="week18">
+                  <div>17</div>
+                  <p></p>
+                </td>
+                <td class="week18">
+                  <div>18</div>
+                  <p></p>
+                </td>
+                <td class="week18">
+                  <div>19</div>
+                  <p></p>
+                </td>
             </tr>
             <tr>
                 <td class="raceDay">
