--- a/index.html
+++ b/index.html
@@ -851,11 +851,14 @@
             <tr>
                 <td class="week18">
                   <div>13</div>
-                  <p>None</p>
+                  <p>2 x 45 push-ups</p>
                 </td>
                 <td class="week18">
                   <div>14</div>
-                  <p></p>
+                  <p>20, 3 x 11 pull-ups</p>
+                  <p>70, 3 x 45 push-ups</p>
+                  <p>2 x Modified Payne Abs</p>
+                  <p>90 s plank</p>
                 </td>
                 <td class="week18">
                   <div>15</div>
