--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           </td>
           <td class="week4">
             <div>9</div>
-            <p>3 x (600 m, 200 m jog, 400 m, 200 m jog, 300 m, 200 m job, 200 m, 200 m job, 100 m, 400 m jog)</p>
+            <p>3 x (600 m, 200 m jog, 400 m, 200 m jog, 300 m, 200 m jog, 200 m, 200 m jog, 100 m, 400 m jog)</p>
             <p>2 x 30 s Modified Abdominal Assault</p>
             <p>Stretch</p>
           </td>
@@ -857,12 +857,16 @@
                   <div>14</div>
                   <p>20, 3 x 11 pull-ups</p>
                   <p>70, 3 x 45 push-ups</p>
-                  <p>2 x Modified Payne Abs</p>
+                  <p>2 x 40 s Modified Payne Abs</p>
                   <p>90 s plank</p>
                 </td>
                 <td class="week18">
                   <div>15</div>
+                  <p>4 x 14 pull-ups</p>
+                  <p>4 x 45 push-ups</p>
                   <p></p>
+                  <p>2 x 40 s Modified Abdominal Assault</p>
+                  <p>90 s plank</p>
                 </td>
                 <td class="week18">
                   <div>16</div>
