--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
     <div id="purpose">
       <p>A project by David Wu. This is a public calendar log keeping a record of my workouts for 18 weeks up until the <a href="https://baystatemarathon.com/">Baystate Marathon</a> on Sunday, October 20, 2019 in Lowell, MA. I will be using <a href="https://content.nike.com/content/dam/one-nike/en_us/season-2015-su/Running/NikeRunClub/TrainingPlans/Marathon_Training_Plan_Miles_3_29_2016.pdf">Nike's 18-week marathon training program</a> for structure.</p>
       <p>Note: Injuries and inconsistency have nixed the training plan but the end goal is still the same. Due to an injury, the current plan is to walk it.</p>
+      <p>Note: Walk completed.</p>
     </div>
-    <button id="detailsPopover" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">
-      <i class="fa fa-question-circle" aria-hidden="true"></i>
+    <button id="detailsPopover1" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">
+      Modified Abdominal Assault <i class="fa fa-question-circle" aria-hidden="true"></i>
+    </button>
+    <button id="detailsPopover2" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">
+      Modified Payne Abs <i class="fa fa-question-circle" aria-hidden="true"></i>
     </button>
   </div>
   
@@ -48,7 +52,7 @@
       <li>Week 15: Sep 22 - Sep 28</li>
       <li>Week 16: Sep 29 - Oct 5</li>
       <li>Week 17: Oct 6 - Oct 12</li>
-      <li id="thisWeek">Week 18: Oct 13 - Oct 19</li>
+      <li>Week 18: Oct 13 - Oct 19</li>
     </div>
   </ul>
 
@@ -864,31 +868,31 @@
                   <div>15</div>
                   <p>4 x 14 pull-ups</p>
                   <p>4 x 45 push-ups</p>
-                  <p></p>
                   <p>2 x 40 s Modified Abdominal Assault</p>
                   <p>90 s plank</p>
                 </td>
                 <td class="week18">
                   <div>16</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week18">
                   <div>17</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week18">
                   <div>18</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
                 <td class="week18">
                   <div>19</div>
-                  <p></p>
+                  <p>None</p>
                 </td>
             </tr>
             <tr>
                 <td class="raceDay">
                     <div>20</div>
                     <p>Baystate Marathon</p>
+                    <p>(<a href="http://iresultslive.com/?op=individual&eid=4543&refid=77660386">Walk Completed</a>)</p>
                 </td>
                 <td class="">21</td>
                 <td class="">22</td>
