--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <p>Note: Walk completed.</p>
     </div>
     <button id="detailsPopover1" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">
-      Modified Abdominal Assault <i class="fa fa-question-circle" aria-hidden="true"></i>
+      <i class="fa fa-question-circle" aria-hidden="true"></i> Modified Abdominal Assault
     </button>
     <button id="detailsPopover2" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">
-      Modified Payne Abs <i class="fa fa-question-circle" aria-hidden="true"></i>
+      <i class="fa fa-question-circle" aria-hidden="true"></i> Modified Payne Abs
     </button>
   </div>
   
