--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <hr>
     <div id="purpose">
       <p>A project by David Wu. This is a public calendar log keeping a record of my workouts for 18 weeks up until the <a href="https://baystatemarathon.com/">Baystate Marathon</a> on Sunday, October 20, 2019 in Lowell, MA. I will be using <a href="https://content.nike.com/content/dam/one-nike/en_us/season-2015-su/Running/NikeRunClub/TrainingPlans/Marathon_Training_Plan_Miles_3_29_2016.pdf">Nike's 18-week marathon training program</a> for structure.</p>
-      <p>Note: Injuries and inconsistency have nixed the training plan but the end goal is still the same. Due to an injury, the current plan is to walk it.</p>
+      <p>Note: Injuries have nixed the training plan but the end goal is still the same. Due to an injury, the current plan is to walk it.</p>
       <p>Note: Walk completed.</p>
     </div>
+    <hr>
     <button id="detailsPopover1" type="button" class="btn btn-secondary" data-container="body" data-toggle="popover" data-placement="bottom" data-content="">
       <i class="fa fa-question-circle" aria-hidden="true"></i> Modified Abdominal Assault
     </button>
@@ -892,7 +893,7 @@
                 <td class="raceDay">
                     <div>20</div>
                     <p>Baystate Marathon</p>
-                    <p>(<a href="http://iresultslive.com/?op=individual&eid=4543&refid=77660386">Walk Completed</a>)</p>
+                    <p>(<a href="http://iresultslive.com/?op=individual&eid=4543&refid=78075641">Walk Completed</a>)</p>
                 </td>
                 <td class="">21</td>
                 <td class="">22</td>
