--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Baystate Marathon Project</h1>
     <hr>
     <div id="purpose">
-      <p>A project by David Wu. This is a public calendar log keeping a record of my workouts for 18 weeks up until the <a href="https://baystatemarathon.com/">Baystate Marathon</a> on Sunday, October 20, 2019 in Lowell, MA. I will be using <a href="https://content.nike.com/content/dam/one-nike/en_us/season-2015-su/Running/NikeRunClub/TrainingPlans/Marathon_Training_Plan_Miles_3_29_2016.pdf">Nike's 18-week marathon training program</a> for structure.</p>
+      <p>A project by David Wu. This is a public calendar log keeping a record of my workouts for 18 weeks up until the <a href="https://baystatemarathon.com/">Baystate Marathon</a> on Sunday, October 20, 2019 in Lowell, MA.</p>
       <p>Note: Injuries have nixed the training plan but the end goal is still the same. Due to an injury, the current plan is to walk it.</p>
       <p>Note: Walk completed.</p>
     </div>
